--- a/README
+++ b/README
@@ -1,4 +1,6 @@
 
 NOTE Project contains code fragments from following Haskell course
-   http://www.seas.upenn.edu/~cis194/lectures.html
+   http://www.seas.upenn.edu/~cis194/lectures.html  (ss of Spring 2015)
+   and
+   http://www.seas.upenn.edu/~cis194/fall14/lectures.html
 
